z-index fix for videos

--- a/assets/css/dynamic-page.css
+++ b/assets/css/dynamic-page.css
@@ -114,6 +114,7 @@
 #video-container {
   width: 95%;
   justify-content: center;
+  z-index: 2;
 }
 
 video {
